# SEKURO_TUGAS_1_ArifiaZahra_PROGRAMMING

install/: local_setup.sh  setup.sh
install/GwGosling/lib/GwGosling/: publisher_node  subscriber_node
install/GwGosling/share/GwGosling/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/GwGosling/src/: publisher_node.cpp
src/oop_soal_1/: CoreMCU  core_mcu.cpp  main.cpp
src/oop_soal_2/: core_mcu.hpp  mcu.cpp  mcu.hpp  mcu_cam_controller.cpp  mcu_walker.cpp
src/ros_soal_1/: Publisher_NOMOR-1.py
src/ros_soal_1/GwGosling/: CMakeLists.txt
src/ros_soal_1/GwGosling/launch/: launch.py
src/ros_soal_1/GwGosling/src/: subscriber_node.cpp
src/stl_soal/: RobotPaket- NOMOR2.cpp
