<?xml version="1.0"?>
<package format="3">
  <name>GwGosling</name>
  <version>0.0.0</version>
  <description>Package ROS2 C++</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
